--- a/var/templates/radionew/editshow.html
+++ b/var/templates/radionew/editshow.html
@@ -55,7 +55,7 @@ function submitEditShow() {
                         newshow = new Array();
                         clearFreeClassNames();
                         addingshow = false;
-                        alert('{% lang L_SAVESUCCESS %}');
+                        alert('{% lang L_EDITSUCCESS %}');
                         window.location.reload();
                     }
                 }
@@ -77,7 +77,7 @@ function submitEditShow() {
                         newshow = new Array();
                         clearFreeClassNames();
                         addingshow = false;
-                        alert('{% lang L_SAVESUCCESS %}');
+                        alert('{% lang L_EDITSUCCESS %}');
                         window.location.reload();
                     }
                 }
