--- a/var/templates/radionew/broadcasts-week.html
+++ b/var/templates/radionew/broadcasts-week.html
@@ -92,7 +92,7 @@ function commitAddShow(){
                       newshow = new Array();
                       clearFreeClassNames();
                       addingshow = false;
-                      alert('Sendung erfolgreich eingetragen!');
+                      alert('{% lang L_SAVESUCCESS %}');
                       window.location.reload();
                   }
               }
