--- a/var/templates/radionew/admin/index.html
+++ b/var/templates/radionew/admin/index.html
@@ -1,6 +1,6 @@
 {% extends "admin/sidebar.html" %}
 {% block content %}
-<h2>Hörerübersicht</h2>
+<h2>{% lang L_LIST_OVERVIEW %}</h2>
 <p>
 nichts
 </p>
