--- a/var/templates/radionew/admin/listener.html
+++ b/var/templates/radionew/admin/listener.html
@@ -1,11 +1,11 @@
 {% extends "admin/sidebar.html" %}
 {% block content %}
-<h2>Hörerübersicht</h2>
+<h2>{% lang L_LIST_OVERVIEW %}</h2>
 <p>
 <table width="100%">
 <thead>
 <tr>
-<td>ID</td><td>Adresse</td><td>Land</td><td>Stadt</td><td>Useragent</td>
+{% lang L_LIST_SHOWDATA %}
 </tr>
 </thead>
 <tbody>
