--- a/var/templates/radionew/broadcasts-week.html
+++ b/var/templates/radionew/broadcasts-week.html
@@ -233,7 +233,7 @@ function clearFreeClassNames() {
    newshow.push($('#'+nid)[0]);
    refreshNewShow();
   }else {
-   alert('{% lang L_ERROR_WRONG_TIME %}');
+   alert('{% lang L_ERR_WRONG_TIME %}');
   }
  }
  function newShowMinus() {
