--- a/var/templates/radionew/editshow.html
+++ b/var/templates/radionew/editshow.html
@@ -4,6 +4,8 @@
 <table>
 <tr><td>{% lang L_TITLE %}</td><td style="text-align:right;">
 <input class="ui-corner-all" style="padding:0.4em 1em;width:250px;" id="name" name="name" value="{{show.name}}"/></td></tr>
+<tr><td>{% lang L_THREAD %}</td><td style="text-align:right;">
+<input class="ui-corner-all" style="padding:0.4em 1em;width:250px;" id="thread" name="thread" value="{{show.thread}}"/></td></tr>
 <tr><td>{% lang L_BEGIN %}</td><td style="text-align:right;">
 <input class="ui-corner-all" style="padding:0.4em 1em;width:100px;" id="startd" name="date" value="{{show.date}}"/>
 <select class="ui-corner-all" style="padding:0.4em 1em;" id="startt" name="startt">
