--- a/var/templates/radionew/viewshow.html
+++ b/var/templates/radionew/viewshow.html
@@ -4,6 +4,9 @@
 {% endif %}
     <h2>{{show.name}} {% if show.editable %}<a href="{{ WEBROOT }}show.php?action=edit&show={{ show.show }}" onclick="editShow({{ show.show }}); return false;"><small>[{% lang L_EDIT %}]</small></a>{% endif %}</h2>
     <p>{{show.description | save}}</p>
+    {% if show.thread > 0 %}
+    <p><a href="http://krautchan.net/rfk/thread-{{show.thread}}.html">{% lang L_SEEKC %}</a></p>
+    {% endif %}
     <h3>{% lang L_TRACKS %} <small><a onclick="$('#songs{{show.show}}').toggle();">[{% lang L_EXPAND %}]</a></small></h3>
     <div style="display:none;" id="songs{{show.show}}">
     {% for song in show.songs %}
