fixed a bug thread need a full url, number only wont work for now :(

--- a/var/templates/radionew/editshow.html
+++ b/var/templates/radionew/editshow.html
@@ -45,6 +45,7 @@ function submitEditShow() {
                 '&description='+encodeURIComponent($('#description').val())+
                 '&length='+$('#length').val()+
                 '&startt='+$('#startt').val()+
+                '&thread='+encodeURIComponent($('#thread').val())+
                 '&startd='+encodeURIComponent($('#startd').val())+
                 '&showid='+$('#showid').val()
                 ,
@@ -68,6 +69,7 @@ function submitEditShow() {
                 '&description='+encodeURIComponent($('#description').val())+
                 '&length='+$('#length').val()+
                 '&startt='+$('#startt').val()+
+                '&thread='+encodeURIComponent($('#thread').val())+
                 '&startd='+encodeURIComponent($('#startd').val())
                 ,
                 function(data) {
