kB-template-fix

--- a/var/templates/radionew/status.html
+++ b/var/templates/radionew/status.html
@@ -23,7 +23,7 @@ document.write(showdescr);
 	{% endfor %}
 	</ul>
     </td>
-    <td rowspan="{{streamnum}}" style="vertical-align:middle;text-align:center;font-size:3em;font-weight:bolder;color:lightgrey;">{{ traffic.out }} Kbit/s</td>
+    <td rowspan="{{streamnum}}" style="vertical-align:middle;text-align:center;font-size:3em;font-weight:bolder;color:lightgrey;">{{ traffic.out }} kB/s</td>
   </tr>
 </table>
 
