--- a/var/templates/radionew/status.html
+++ b/var/templates/radionew/status.html
@@ -11,7 +11,7 @@
     <p><a href="http://krautchan.net/rfk/thread-{{show.thread}}.html">{% lang L_SEEKC %}</a></p>
     {% endif %}
 {% else %}
-    {% lang lang L_NP_NOONESTREAMING %}
+    {% lang L_NP_NOONESTREAMING %}
 {% endif %}
 <br /><br />
 <h2>{% lang L_STREAMS %}</h2>
