--- a/var/templates/radionew/broadcasts-sb.html
+++ b/var/templates/radionew/broadcasts-sb.html
@@ -6,9 +6,14 @@ block.super
 <div id='subcontent'>
 <div class='infoblock'>
 <h3>{% lang L_NEXTSHOWS %}</h3>
+<script type="text/javascript">
+function nextShowInfo(showid){
+    loadDialog('{{ WEBROOT }}show.php?action=show&ajax=true&show='+showid,true);
+}
+</script>
 <ul>
 {% for show in nextshows %}
-<li>{{show.showname}} ({{show.streamer}})</li>
+<li><a href="javascript:nextShowInfo({{show.showid}});">{{show.showname}} ({{show.streamer}})</a></li>
 {% endfor %}
 </ul>
 </div>
