updated h2o; removed escape tag (autoescape now on); API changes

--- a/var/templates/radionew/base.html
+++ b/var/templates/radionew/base.html
@@ -35,7 +35,7 @@
         <img src="{{ WEBROOT }}images/logo.png" alt="Logo" />
         <div class="disco">
         {% if disco_background %}
-            <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background | escape true }}" height=65px width=129px /></div>
+            <div class="cbackground"><img src="http://www.abload.de/img/{{ disco_background }}" height=65px width=129px /></div>
         {% endif %}
             <div class="foreground"><img src="{{ WEBROOT }}images/disco.png" /></div>
         {% if disco_streamer %}
