show timestamps for upcoming shows

--- a/var/templates/radionew/broadcasts-sb.html
+++ b/var/templates/radionew/broadcasts-sb.html
@@ -8,7 +8,7 @@ block.super
 <h3>{% lang L_NEXTSHOWS %}</h3>
 <script type="text/javascript">
 function nextShowInfo(showid){
-    loadDialog('{{ WEBROOT }}show.php?action=show&ajax=true&show='+showid,true);
+    loadDialog('{{ WEBROOT }}show.php?action=show&ajax=true&tstamp=true&show='+showid,true);
 }
 </script>
 <ul>
