users can now into password changing

--- a/var/templates/radionew/register.html
+++ b/var/templates/radionew/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Registrieren</h2>
+<h2>{% lang L_REGISTER %}</h2>
 <div class="register">
 <form method="POST">
 <table>
