--- a/var/templates/radionew/showsettings.html
+++ b/var/templates/radionew/showsettings.html
@@ -1,10 +1,9 @@
 {% extends "sidebar-user.html" %}
 {% block content %}
 <h2>{% lang L_SETTINGS %}</h2>
-<p>
 <form method="post">
 <table>
-<tr>
+<tr style="font-weight:bold">
     <td colspan=2 >{% lang L_SHOWSETTINGS %}</td>
 </tr>
 <tr>
@@ -20,6 +19,7 @@
     <td>{% lang L_DISCOBACK %}</td><td><input name="background" value="{{ background }}"></td>
 </tr>
 </table>
+<br />
 <input type="submit" name="submit" value="{% lang L_SAVESETTINGS %}" />
 </form>
 {% endblock %}
