--- a/var/templates/radionew/settings.html
+++ b/var/templates/radionew/settings.html
@@ -13,6 +13,9 @@
     <td colspan=2 >{% lang L_PWSETTINGS %}</td>
 </tr>
 <tr>
+    <td>{% lang L_OLDPASSWORD %}</td><td><input type="password" name="olduserpass"/></td>
+</tr>
+<tr>
     <td>{% lang L_PASSWORD %}</td><td><input type="password" name="newuserpass"/></td>
 </tr>
 <tr>
