--- a/var/templates/radionew/broadcasts-week.html
+++ b/var/templates/radionew/broadcasts-week.html
@@ -73,6 +73,7 @@ function abortAddShow() {
     clearFreeClassNames();
     addingshow = false;
     $('#addshow').fadeOut();
+    window.location.reload();
 }
 
 function commitAddShow(){
