--- a/var/templates/radionew/status.html
+++ b/var/templates/radionew/status.html
@@ -32,7 +32,7 @@
 {% if userstreaming %}
 <p>
 <h3>{% lang L_LISTENEROVERVIEW %}</h3>
-<table>
+<table class="donation">
 <tr><td>&nbsp;</td><td>{% lang L_CITY %}</td><td>{% lang L_MOUNT %}</td><td>{% lang L_TIMECONNECTED %}</td></tr>
 {% for listener in listeneroverview %}
 <tr><td><img src="{{ WEBROOT }}images/cb/{{ listener.country }}.png" /></td><td>{{ listener.city }}</td><td>{{ listener.mount }}</td><td>{{ listener.time }}</td></tr>
