--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -3,12 +3,35 @@
 body,html {
 	padding: 0px;
 	margin: 0px;
+	height: 100%;
+	width: 100%;
+	font-family: sans-serif;
+	font-size: 0.95em;
+	background-color: #FEFEFE;
+	color: #111111;
+}
+
+a {
+	text-decoration: none;
+	color: #444444;
+}
+
+#content {
+	margin-left: 250px;
+	padding-right: 10px;
+	padding-bottom: 25px;
+}
+
+#sidebar {
+	float: left;
+	width: 230px;
+	padding: 10px;
 }
 
 #loginbox {
 	position: relative;
 	background-color: red;
-	display:inline;
+	display: inline;
 }
 
 #footer {
@@ -19,25 +42,21 @@ body,html {
 	left: 0px;
 	right: 0px;
 	background-color: #C0C0C0;
-}
-
-#header #menubar {
-	display: inline;
-	position: relative;
-	border-right: 1px solid grey;
-	border-top: 1px solid grey;
-	border-bottom: 1px solid grey;
-	width: auto;
-	border-right: 1px solid grey;
-	background-color: #C0C0C0;
+	z-index: 255;
 }
 
 #header #menubar li {
+	font-size: 1.3em;
 	display: inline;
 	list-style-type: none;
 }
 
-#header #menubar ul {
+#header #menubar {
 	display: inline;
-	margin: 10px 0px;
+	border-right: 1px solid grey;
+	border-top: 1px solid grey;
+	border-bottom: 1px solid grey;
+	padding: 5px 30px;
+	border-right: 1px solid grey;
+	background-color: #C0C0C0;
 }
