--- a/var/templates/mkiv/base.html
+++ b/var/templates/mkiv/base.html
@@ -17,44 +17,56 @@
         </script>
     </head>
     <body>
-    <div id="header">
-        <img src="{{ WEBROOT }}images/logo.png" alt="logo" />
-        <br/>
-		<div>
-        <ul id="menubar">
-            <li>
-                <a href="#" onclick="showLoginBox(this);">Login</a>
-                <div id="loginbox">
-                    User<input id="username" />&nbsp;
-                    Pass<input id="password" /><input type="button" value="login"/>
-                </div>
-            </li>
-			{% for index, item in menu %}
-			<li>
-                <a href="{{ item.url }}">{{ item.name }}</a>
-            </li>
-			{% endfor %}
-        </ul>
-		</div>
-    </div>
-    </div>
-    <div id="sidebar">
-        <ul>
-            <li>
-                Super tolle liste
-            </li>
-            <li>
-                Super tolle liste
-            </li>
-        </ul>
-    </div>
-    <div id="content">
-        {% block content %}
-        {% endblock %}
-    </div>
-    <div id="footer">
-        {{ uptime }}
-        {% include "disco.html" %}
-    </div>
-</body>
+        <div id="boxes">
+            <div id="logindialog" class="window">
+                <h2>Login</h2>
+				<table>
+					<tr><td>Username</td><td><input name="username" id="iUsername"/></td></tr>
+					<tr><td>Password</td><td><input name="password" id="iPassword"/></td></tr>
+					<tr><td>&nbsp;</td><td style="text-align:right;"><input type="button" value="Cancel" onclick="$('#mask, .window').hide();"/>&nbsp;&nbsp;<input type="button" value="Login"/></td></tr>
+				</table>
+				
+				<br />
+                You don't have an account? <a href="#">register one</a><br />
+            </div>
+            <div id="mask">
+            </div>
+        </div>
+        <div id="header">
+            <img src="{{ WEBROOT }}images/logo.png" alt="logo" />
+            <div id="menubar">
+                <ul>
+                    <li>
+                        <a href="#" onclick="showLoginBox();">Login</a>
+                    </li>
+                    <li class="separator">
+                        &nbsp;
+                    </li>
+                    {% for index, item in menu %}
+                    <li>
+                        <a href="{{ item.url }}">{{ item.name }}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div id="sidebar">
+            <ul>
+                <li>
+                    Super tolle liste
+                </li>
+                <li>
+                    Super tolle liste
+                </li>
+            </ul>
+        </div>
+        <div id="content">
+            {% block content %}
+            {% endblock %}
+        </div>
+        <div id="footer">
+            {{ uptime }}
+            {% include "disco.html" %}
+        </div>
+    </body>
 </html>
