--- a/var/templates/mkiv/base.html
+++ b/var/templates/mkiv/base.html
@@ -51,14 +51,7 @@
             </div>
         </div>
         <div id="sidebar">
-            <ul>
-                <li>
-                    Super tolle liste
-                </li>
-                <li>
-                    Super tolle liste
-                </li>
-            </ul>
+            {% include "sidebar.html" %}
         </div>
         <div id="content">
             {% block content %}
